Complete homework 2: Movie Poster Generator

--- a/homework-2.ipynb
+++ b/homework-2.ipynb
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1412,24 +1412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'homework-2.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[homework-2 4a7ee40] Complete homework 2: Movie Poster Generator\n",
-      " 4 files changed, 602 insertions(+), 1049 deletions(-)\n",
-      " create mode 100644 .env\n",
-      " create mode 100644 temp/poster_movie.png\n"
+      "On branch homework-2-clean\n",
+      "Your branch is up to date with 'origin/homework-2-clean'.\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
      ]
     }
    ],
@@ -1442,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1464,43 +1457,17 @@
       "remote:             \n",
       "remote:       —— OpenAI API Key ————————————————————————————————————        \n",
       "remote:        locations:        \n",
-      "remote:          - commit: 4a7ee4048d2d9f5c6c185f54d0e0600e21703140        \n",
-      "remote:            path: .env:1        \n",
-      "remote:             \n",
-      "remote:        (?) To push, remove secret from commit(s) or follow this URL to allow the secret.        \n",
-      "remote:        https://github.com/misrautkarsh/ai-engineering-fordham/security/secret-scanning/unblock-secret/38mLQDrrkl3TeBgseDsoe3QOnyq        \n",
-      "remote:             \n",
-      "remote:             \n",
-      "remote:       —— OpenAI API Key ————————————————————————————————————        \n",
-      "remote:        locations:        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
+      "remote:          - commit: 1dfb561243ce195ca5e5e870d211da36bd353abe        \n",
       "remote:            path: homework-2.ipynb:420        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
+      "remote:          - commit: 1dfb561243ce195ca5e5e870d211da36bd353abe        \n",
       "remote:            path: homework-2.ipynb:587        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
+      "remote:          - commit: 1dfb561243ce195ca5e5e870d211da36bd353abe        \n",
       "remote:            path: homework-2.ipynb:1066        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
+      "remote:          - commit: 1dfb561243ce195ca5e5e870d211da36bd353abe        \n",
       "remote:            path: homework-2.ipynb:1113        \n",
       "remote:             \n",
       "remote:        (?) To push, remove secret from commit(s) or follow this URL to allow the secret.        \n",
       "remote:        https://github.com/misrautkarsh/ai-engineering-fordham/security/secret-scanning/unblock-secret/38m3A8T9gdYTDd04wyPy8d2YMWt        \n",
-      "remote:             \n",
-      "remote:             \n",
-      "remote:       —— OpenAI API Key ————————————————————————————————————        \n",
-      "remote:        locations:        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
-      "remote:            path: homework-2.ipynb:827        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
-      "remote:            path: homework-2.ipynb:904        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
-      "remote:            path: homework-2.ipynb:943        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
-      "remote:            path: homework-2.ipynb:1431        \n",
-      "remote:          - commit: 81d7338eacb4c17a581751b1d459225f11ad540f        \n",
-      "remote:            path: homework-2.ipynb:1759        \n",
-      "remote:             \n",
-      "remote:        (?) To push, remove secret from commit(s) or follow this URL to allow the secret.        \n",
-      "remote:        https://github.com/misrautkarsh/ai-engineering-fordham/security/secret-scanning/unblock-secret/38m3A7QdBUW6GDitmSQu0fvZxGw        \n",
       "remote:             \n",
       "remote: \n",
       "remote: \n",
@@ -1537,9 +1504,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\thomework-2.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n",
+      "Your configuration specifies to merge with the ref 'refs/heads/homework-2-clean'\n",
+      "from the remote, but no such ref was fetched.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "826d3e5 Complete homework 2: Movie Poster Generator\n",
+      "47b3de5 Complete homework 2: Movie Poster Generator\n",
+      "37d3aed Complete homework 2: Movie Poster Generator\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify your PR was merged (run after merging on GitHub)\n",
     "!git checkout main\n",
